--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,146 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+/* 
+cd animal-shelter  
+sass --watch src/styles/index.scss src/index.css
+ */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+*, *::before, *::after {
+  box-sizing: border-box;
+}
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+* {
+  margin: 0;
+  padding: 0;
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+ul, ol {
+  list-style: none;
+}
+
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+a:not([class]) {
+  text-decoration-skip-ink: auto;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  text-decoration: none;
 }
-a:hover {
-  color: #535bf2;
+
+img, picture, svg, video, canvas {
+  max-width: 100%;
+  height: auto;
+  vertical-align: middle;
+  font-style: italic;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+input, button, textarea, select {
+  font: inherit;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+    scroll-behavior: auto;
+  }
+  *, *::before, *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+    transition: none;
+  }
+}
+body, html {
+  height: 100%;
+  scroll-behavior: smooth;
+}
+
+/*Basic style*/
+html {
+  font-size: 16px;
+}
+@media only screen and (max-width: 768px) {
+  html {
+    font-size: 12px;
+  }
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
+  font-family: "Roboto", serif;
+}
+
+.container {
   min-width: 320px;
-  min-height: 100vh;
+  max-width: 100%;
+  box-sizing: border-box;
+  margin: 0 auto;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.wrap {
+  min-width: 320px;
+  max-width: 1200px;
+  box-sizing: border-box;
+  margin: 0 auto;
 }
 
+p,
+a,
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  color: #000;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
+
+@font-face {
+  font-family: "FactorA";
+  src: url("./fonts/FactorA-TRIAL/TRIAL_FactorA-Regular.woff2") format("woff2"), url("./fonts/FactorA-TRIAL/TRIAL_FactorA-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+}
+.main-header {
+  background-color: #EFF6FF;
+  padding: 24px 0;
+}
+.main-header .header-cont {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.main-header .header-cont__logo-cont {
+  display: flex;
+  gap: 12px;
+}
+.main-header .header-cont__logo-img {
+  max-width: 56.27px;
+  max-height: auto;
+}
+.main-header .header-cont__logo-name {
+  font-size: 1.5rem;
+  margin-bottom: 4px;
+}
+.main-header .header-cont__nav {
+  display: flex;
+  gap: clamp(0px, 4vw, 50px);
+}
+.main-header .header-cont__nav-link {
+  font-size: 0.875rem;
+  white-space: nowrap;
+}
+.main-header .header-cont__nav-link--active {
+  text-decoration: underline;
+}
+.main-header .header-cont__nav-link--blue {
+  background-color: #4796F3;
+  color: white;
+  padding: 0.625rem 1.875rem;
+  border-radius: 20px;
+}
+
+/*# sourceMappingURL=index.css.map */
