footer, стили к нему

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -9,11 +9,12 @@
 
         &__logo-cont {
             display: flex;
+            align-items: center;
             gap: 12px;
         }
 
         &__logo-img {
-            max-width: 56.27px;
+            width: 56.27px;
             max-height: auto;
         }
 
