--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,4 +12,7 @@ sass --watch src/styles/index.scss src/index.css
 @import 'fonts';
 
 @import './blocks/header.scss';
+@import './blocks/title.scss';
 @import './blocks/pet-list-section.scss';
+@import './blocks/footer.scss';
+
