--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* 
 cd animal-shelter  
 sass --watch src/styles/index.scss src/index.css
@@ -116,10 +115,11 @@ img {
 }
 .main-header .header-cont__logo-cont {
   display: flex;
+  align-items: center;
   gap: 12px;
 }
 .main-header .header-cont__logo-img {
-  max-width: 56.27px;
+  width: 56.27px;
   max-height: auto;
 }
 .main-header .header-cont__logo-name {
@@ -167,62 +167,125 @@ img {
   justify-content: space-between;
   margin-bottom: 15px;
 }
-
 .pets-section__type-filter {
   display: flex;
   gap: 40px;
 }
-
 .pets-section__type-filter-item {
   line-height: 1.2rem;
   cursor: pointer;
 }
-
 .pets-section__type-filter-item--active {
   text-decoration: underline;
 }
-
 .pets-section__pets-list {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* Всегда 3 колонки */
+  grid-template-columns: repeat(3, 1fr);
   gap: 30px 45px;
 }
-
 .pets-section__pet-item {
   max-width: 100%;
   cursor: pointer;
 }
-
 .pets-section__pet-img {
   margin-bottom: 20px;
 }
-
 .pets-section__pet-info-cont {
   display: flex;
   justify-content: space-between;
   margin-bottom: 14px;
 }
-
 .pets-section__pet-name-age-cont {
   display: flex;
   gap: 15px;
 }
-
 .pets-section__pet-name {
   font-size: 2rem;
   line-height: 2.4rem;
   margin-top: auto;
 }
-
 .pets-section__pet-age {
   line-height: 1.375rem;
   font-weight: 500;
   margin-top: auto;
 }
-
 .pets-section__pet-description {
   line-height: 1.375rem;
   font-weight: 300;
+}
+
+.main-footer {
+  margin-top: 109px;
+  background-color: #EFF6FF;
+  padding: 67px 0;
+  position: relative;
+  overflow: hidden;
+}
+.main-footer::after, .main-footer::before {
+  content: "";
+  position: absolute;
+  background-repeat: no-repeat;
+}
+.main-footer::after {
+  width: 611.38px;
+  height: 240px;
+  top: 0;
+  right: -120px;
+  background-image: url("././assets/icons/footer-bg-item1.svg");
+}
+.main-footer::before {
+  width: 611.38px;
+  height: 170px;
+  bottom: 0;
+  left: 0;
+  background-image: url("././assets/icons/footer-bg-item2.svg");
+}
+
+.footer-cont {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 320px;
+  max-width: 1074px;
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+
+.footer-cont__logo-cont {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  margin-bottom: 40px;
+}
+.footer-cont__logo-cont .footer-cont__logo-img {
+  width: 74.67px;
+  max-height: auto;
+}
+.footer-cont__logo-cont .footer-cont__logo-name {
+  font-size: 2rem;
+  line-height: 2.39rem;
+  margin-bottom: 5px;
+}
+.footer-cont__logo-cont .footer-cont__logo-description {
+  font-size: 1.33rem;
+  line-height: 1.6rem;
+}
+
+.footer-cont__shelter-desc {
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 2.25rem;
+  text-align: center;
+  margin-bottom: 70px;
+}
+
+.footer-cont__social-media-cont {
+  display: flex;
+  gap: 20px;
+}
+.footer-cont__social-media-cont .footer-cont__social-media-item > img {
+  width: 40px;
+  height: 40px;
 }
 
 /*# sourceMappingURL=index.css.map */
