--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,6 +13,7 @@ sass --watch src/styles/index.scss src/index.css
 
 @import './blocks/header.scss';
 @import './blocks/title.scss';
+@import './blocks/card.scss';
 @import './blocks/pet-list-section.scss';
 @import './blocks/footer.scss';
 
