--- a/src/index.css
+++ b/src/index.css
@@ -130,9 +130,13 @@ img {
 .main-header .header-cont__logo-description {
   line-height: 1.2rem;
 }
+.main-header .header-cont__nav-cont {
+  flex: 1;
+  max-width: 660px;
+}
 .main-header .header-cont__nav {
   display: flex;
-  gap: clamp(0px, 4vw, 50px);
+  justify-content: space-between;
 }
 .main-header .header-cont__nav-link {
   font-size: 0.875rem;
@@ -155,13 +159,208 @@ img {
   line-height: 2.625rem;
   max-width: 1000px;
   text-align: center;
-  margin: 50px auto 40px;
+  margin: 50px auto 0px;
 }
 
 .pink {
   color: #EB6CA9;
 }
 
+.pet-card-section {
+  margin-top: 20px;
+}
+
+.breadcrumb__list {
+  display: flex;
+  align-items: center;
+}
+
+.breadcrumb__item {
+  display: flex;
+  align-items: center;
+}
+
+.breadcrumb__item, .breadcrumb__item > a {
+  color: #D9D9D9;
+}
+
+.breadcrumb__item + .breadcrumb__item::before {
+  content: "";
+  display: inline-block;
+  width: 17px;
+  height: 17px;
+  background: url("././assets/icons/paw.svg") no-repeat center center;
+  background-size: contain;
+  margin: 0 23px;
+}
+
+.pet-card {
+  display: flex;
+  margin-top: 30px;
+  gap: 55px;
+  max-height: 450px;
+  position: relative;
+}
+
+.pet-card::before {
+  content: "";
+  position: absolute;
+  background-repeat: no-repeat;
+  width: 455px;
+  height: 178.61px;
+  bottom: 32px;
+  left: -110px;
+  background-image: url("././assets/icons/card-bg-item.svg");
+  z-index: -1;
+}
+
+.pet-card__description {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  max-width: 400px;
+  max-height: 450px;
+}
+
+.pet-card__name {
+  font-size: 3rem;
+  font-weight: 500;
+  line-height: 3.6rem;
+  margin-bottom: 40px;
+}
+
+.pet-card__info {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.pet-card__info-item {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 15px;
+  border-bottom: 1px solid black;
+}
+
+.pet-card__info-item:last-child {
+  border-bottom: none;
+}
+
+.pet-card__info-title {
+  font-size: 1.25rem;
+  font-weight: 500;
+  line-height: 1.5rem;
+}
+
+.pet-card__info-value {
+  font-size: 1.25rem;
+  font-weight: 300;
+  line-height: 1.5rem;
+}
+
+.pet-card__shelter-button {
+  margin-top: auto;
+  border: 1px solid transparent;
+  background-color: #4796F3;
+  border-radius: 30px;
+  color: white;
+  font-size: 1.5rem;
+  padding: 16px 36px;
+  cursor: pointer;
+}
+
+.pet-card__shelter-button:hover {
+  border-color: #4796F3;
+  background-color: white;
+  color: #4796F3;
+}
+
+.pet-card__gallery {
+  display: grid;
+  gap: 15px;
+  max-width: 745px;
+  grid-template-columns: 59fr 14fr;
+  aspect-ratio: 59/14;
+}
+
+.pet-card__main-photo {
+  width: 100%;
+  height: 100%;
+}
+
+.pet-card__slider {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  gap: 15px;
+}
+
+.pet-card__slider-item img {
+  aspect-ratio: 1/1;
+}
+
+.pet-card__slider-item--active img {
+  opacity: 0.5;
+}
+
+.more-info {
+  display: flex;
+  margin-top: 70px;
+  gap: 56px;
+}
+
+.more-info__help {
+  display: flex;
+  flex-direction: column;
+  max-width: 400px;
+  width: 100%;
+}
+
+.more-info__title {
+  font-size: 3rem;
+  font-weight: 500;
+  line-height: 3.6rem;
+  white-space: nowrap;
+  margin-bottom: 30px;
+}
+
+.more-info__buttons-cont {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  align-items: flex-start;
+}
+
+.more-info__button {
+  border: 1px solid #4796F3;
+  background-color: white;
+  border-radius: 20px;
+  color: #4796F3;
+  font-size: 1.25rem;
+  padding: 10px 36px;
+  cursor: pointer;
+  border-width: 1.3px;
+}
+
+.more-info__button:hover {
+  background-color: #4796F3;
+  color: white;
+}
+
+.more-info__text-cont {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.more-info__text-cont p {
+  font-size: 1.25rem;
+  font-weight: 300;
+  line-height: 1.5rem;
+}
+
+.pets-section {
+  margin-top: 40px;
+}
 .pets-section__filter-cont {
   display: flex;
   justify-content: space-between;
