--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -1,10 +1,12 @@
 .main-title {
+  max-width: 1000px;
+  margin: 50px auto 0px;
+}
+.title{
   font-weight: 500;
   font-size: 2rem;
   line-height: 2.625rem;
-  max-width: 1000px;
   text-align: center;
-  margin: 50px auto 0px;
 }
 
 .pink {
