--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,4 +16,6 @@ sass --watch src/styles/index.scss src/index.css
 @import './blocks/card.scss';
 @import './blocks/pet-list-section.scss';
 @import './blocks/footer.scss';
+@import './blocks/button.scss';
+@import './blocks/hero.scss';
 
