изменил шрифты, стили кнопок

--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -10,8 +10,8 @@ html {
 }
 
 body {
-    font-family: 'Roboto', serif; 
-  }
+  font-family: 'Geologica', sans-serif; 
+}
   
 .container {
   @include min-max(320px, 100%);
