--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 cd animal-shelter  
 sass --watch src/styles/index.scss src/index.css
  */
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&display=swap");
 *, *::before, *::after {
   box-sizing: border-box;
 }
@@ -69,7 +69,7 @@ html {
 }
 
 body {
-  font-family: "Roboto", serif;
+  font-family: "Geologica", sans-serif;
 }
 
 .container {
@@ -98,12 +98,6 @@ img {
   height: auto;
 }
 
-@font-face {
-  font-family: "FactorA";
-  src: url("./fonts/FactorA-TRIAL/TRIAL_FactorA-Regular.woff2") format("woff2"), url("./fonts/FactorA-TRIAL/TRIAL_FactorA-Regular.woff") format("woff");
-  font-weight: 400;
-  font-style: normal;
-}
 .main-header {
   background-color: #EFF6FF;
   padding: 24px 0;
@@ -147,10 +141,11 @@ img {
   text-decoration: underline;
 }
 .main-header .header-cont__nav-link--blue {
-  background-color: #4796F3;
-  color: white;
   padding: 0.625rem 1.875rem;
   border-radius: 20px;
+}
+.main-header .header-cont__nav-link--blue:hover {
+  background-color: #EFF6FF;
 }
 
 .main-title {
@@ -177,16 +172,11 @@ img {
   display: flex;
   align-items: center;
 }
-
 .breadcrumb__item {
   display: flex;
   align-items: center;
-}
-
-.breadcrumb__item, .breadcrumb__item > a {
   color: #D9D9D9;
 }
-
 .breadcrumb__item + .breadcrumb__item::before {
   content: "";
   display: inline-block;
@@ -196,6 +186,9 @@ img {
   background-size: contain;
   margin: 0 23px;
 }
+.breadcrumb__item > a {
+  color: #D9D9D9;
+}
 
 .pet-card {
   display: flex;
@@ -204,7 +197,6 @@ img {
   max-height: 450px;
   position: relative;
 }
-
 .pet-card::before {
   content: "";
   position: absolute;
@@ -216,7 +208,6 @@ img {
   background-image: url("././assets/icons/card-bg-item.svg");
   z-index: -1;
 }
-
 .pet-card__description {
   display: flex;
   flex-direction: column;
@@ -224,60 +215,46 @@ img {
   max-width: 400px;
   max-height: 450px;
 }
-
 .pet-card__name {
   font-size: 3rem;
   font-weight: 500;
   line-height: 3.6rem;
   margin-bottom: 40px;
 }
-
 .pet-card__info {
   display: flex;
   flex-direction: column;
   gap: 15px;
 }
-
 .pet-card__info-item {
   display: flex;
   justify-content: space-between;
   padding-bottom: 15px;
   border-bottom: 1px solid black;
 }
-
 .pet-card__info-item:last-child {
   border-bottom: none;
 }
-
 .pet-card__info-title {
   font-size: 1.25rem;
   font-weight: 500;
   line-height: 1.5rem;
 }
-
 .pet-card__info-value {
   font-size: 1.25rem;
   font-weight: 300;
   line-height: 1.5rem;
 }
-
 .pet-card__shelter-button {
   margin-top: auto;
-  border: 1px solid transparent;
-  background-color: #4796F3;
-  border-radius: 30px;
-  color: white;
   font-size: 1.5rem;
-  padding: 16px 36px;
-  cursor: pointer;
+  padding: 1rem 2.25rem;
 }
-
 .pet-card__shelter-button:hover {
   border-color: #4796F3;
   background-color: white;
   color: #4796F3;
 }
-
 .pet-card__gallery {
   display: grid;
   gap: 15px;
@@ -285,22 +262,18 @@ img {
   grid-template-columns: 59fr 14fr;
   aspect-ratio: 59/14;
 }
-
 .pet-card__main-photo {
   width: 100%;
   height: 100%;
 }
-
 .pet-card__slider {
   display: grid;
   grid-template-rows: repeat(3, 1fr);
   gap: 15px;
 }
-
 .pet-card__slider-item img {
   aspect-ratio: 1/1;
 }
-
 .pet-card__slider-item--active img {
   opacity: 0.5;
 }
@@ -310,14 +283,12 @@ img {
   margin-top: 70px;
   gap: 56px;
 }
-
 .more-info__help {
   display: flex;
   flex-direction: column;
   max-width: 400px;
   width: 100%;
 }
-
 .more-info__title {
   font-size: 3rem;
   font-weight: 500;
@@ -325,36 +296,26 @@ img {
   white-space: nowrap;
   margin-bottom: 30px;
 }
-
 .more-info__buttons-cont {
   display: flex;
   flex-direction: column;
   gap: 24px;
   align-items: flex-start;
 }
-
 .more-info__button {
-  border: 1px solid #4796F3;
-  background-color: white;
-  border-radius: 20px;
-  color: #4796F3;
   font-size: 1.25rem;
-  padding: 10px 36px;
-  cursor: pointer;
+  padding: 0.625rem 2.25rem;
   border-width: 1.3px;
 }
-
 .more-info__button:hover {
   background-color: #4796F3;
   color: white;
 }
-
 .more-info__text-cont {
   display: flex;
   flex-direction: column;
   gap: 12px;
 }
-
 .more-info__text-cont p {
   font-size: 1.25rem;
   font-weight: 300;
@@ -422,11 +383,13 @@ img {
   padding: 67px 0;
   position: relative;
   overflow: hidden;
+  z-index: -2;
 }
 .main-footer::after, .main-footer::before {
   content: "";
   position: absolute;
   background-repeat: no-repeat;
+  z-index: -1;
 }
 .main-footer::after {
   width: 611.38px;
@@ -490,6 +453,36 @@ img {
   height: 40px;
 }
 
+.btn {
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+  cursor: pointer;
+}
+.btn:focus {
+  outline: none;
+}
+
+.btn--blue {
+  background-color: #4796F3;
+  color: white;
+  border-radius: 30px;
+  border: 1px solid #4796F3;
+}
+.btn--blue:hover {
+  background-color: white;
+  color: #4796F3;
+}
+
+.btn--white {
+  background-color: white;
+  color: #4796F3;
+  border: 1px solid #4796F3;
+  border-radius: 20px;
+}
+.btn--white:hover {
+  background-color: #4796F3;
+  color: white;
+}
+
 .hero {
   display: flex;
   justify-content: space-between;
@@ -530,13 +523,22 @@ img {
   rotate: 180deg;
 }
 .hero__img-cont--right::after {
-  bottom: 70px;
-  right: 50px;
+  top: 167px;
+  right: 25px;
   rotate: 180deg;
 }
 .hero__img-cont--right::before {
   top: 25px;
   left: -200px;
+}
+
+.hero__img--dog {
+  max-height: 552.25px;
+  max-width: auto;
+}
+.hero__img--cat {
+  max-height: 552.25px;
+  max-width: auto;
 }
 
 .hero__title {
@@ -549,14 +551,8 @@ img {
 .hero__find-pet-butt {
   position: relative;
   margin: 100px auto 0;
-  border: 1px solid transparent;
-  background-color: #4796F3;
-  border-radius: 30px;
-  color: white;
   font-size: 1.5rem;
-  padding: 12px 60px;
-  cursor: pointer;
-  transition: 0.3s ease-in-out;
+  padding: 0.75rem 3.75rem;
 }
 .hero__find-pet-butt::after, .hero__find-pet-butt::before {
   content: "";
@@ -576,25 +572,6 @@ img {
   bottom: 0;
   right: -425px;
   background-image: url("././assets/icons/drown-cat.svg");
-}
-
-.hero__find-pet-butt:hover {
-  border: 1px solid #4796F3;
-  background-color: white;
-  border-radius: 30px;
-  color: #4796F3;
-  font-size: 1.5rem;
-  padding: 12px 60px;
-  cursor: pointer;
-}
-
-.hero__img--dog {
-  max-width: 547.05px;
-  max-height: 552.25px;
-}
-.hero__img--cat {
-  max-width: 547.05px;
-  max-height: 552.25px;
 }
 
 /*# sourceMappingURL=index.css.map */
