--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+//@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&display=swap');
 
 // @font-face {
 //     font-family: 'Factor A';
@@ -70,11 +71,11 @@
 //     font-style: italic;
 //   }
   
-  @font-face {
-    font-family: 'FactorA';
-    src: url('./fonts/FactorA-TRIAL/TRIAL_FactorA-Regular.woff2') format('woff2'),
-         url('./fonts/FactorA-TRIAL/TRIAL_FactorA-Regular.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-  }
+  // @font-face {
+  //   font-family: 'FactorA';
+  //   src: url('./fonts/FactorA-TRIAL/TRIAL_FactorA-Regular.woff2') format('woff2'),
+  //        url('./fonts/FactorA-TRIAL/TRIAL_FactorA-Regular.woff') format('woff');
+  //   font-weight: 400;
+  //   font-style: normal;
+  // }
   
