--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,4 +18,5 @@ sass --watch src/styles/index.scss src/index.css
 @import './blocks/footer.scss';
 @import './blocks/button.scss';
 @import './blocks/hero.scss';
+@import './blocks/our-mission.scss';
 
