карточки как взять питомца + стили

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,3 +2,6 @@ $header-bg: #EFF6FF;
 $header-link-bg: #4796F3;
 $title-pink: #EB6CA9;
 $light-gray: #D9D9D9;
+$step--blue: #D2E6FF;
+$step--pink: #FFCEE6;
+$step--yellow: #FFE7BD;
