--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,4 +19,4 @@ sass --watch src/styles/index.scss src/index.css
 @import './blocks/button.scss';
 @import './blocks/hero.scss';
 @import './blocks/our-mission.scss';
-
+@import './blocks/adopt-steps.scss';
