--- a/src/index.css
+++ b/src/index.css
@@ -153,11 +153,17 @@ img {
   margin: 50px auto 0px;
 }
 
-.title {
+.title-h1 {
   font-weight: 500;
   font-size: 2rem;
   line-height: 2.625rem;
   text-align: center;
+}
+
+.title-h2 {
+  font-weight: 400;
+  font-size: 2.25rem;
+  line-height: 2.625rem;
 }
 
 .pink {
@@ -625,6 +631,102 @@ img {
   border-radius: 20px;
   border: 1.3px solid #4796F3;
   padding: 0.75rem 1.25rem;
+}
+
+.adopt-steps {
+  text-align: center;
+  padding: 40px;
+}
+
+.adopt-steps__title {
+  text-align: left;
+  margin-bottom: 30px;
+  margin-top: 80px;
+}
+
+.steps {
+  display: flex;
+  gap: 50px;
+}
+
+.step {
+  display: flex;
+  position: relative;
+  width: 366.67px;
+  height: 250px;
+  padding: 30px 15px 30px 30px;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.step--1 {
+  background-color: #D2E6FF;
+}
+
+.step--2 {
+  background-color: #FFCEE6;
+}
+
+.step--3 {
+  background-color: #FFE7BD;
+}
+
+.step-number {
+  position: absolute;
+  border-radius: 50%;
+  width: 90px;
+  height: 90px;
+  background-color: white;
+  top: 30px;
+  left: 30px;
+}
+
+.step .step-number::after {
+  content: "";
+  position: absolute;
+  background-repeat: no-repeat;
+  background-size: contain;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 18.5px;
+  height: 40px;
+}
+
+.step--1 .step-number::after {
+  background-image: url("././assets/icons/number-1.svg");
+}
+
+.step--2 .step-number::after {
+  background-image: url("././assets/icons/number-2.svg");
+}
+
+.step--3 .step-number::after {
+  background-image: url("././assets/icons/number-3.svg");
+}
+
+.step::before {
+  content: "";
+  position: absolute;
+  top: -206px;
+  left: -204px;
+  background-color: transparent;
+  border-radius: 50%;
+  border: 4px solid white;
+  width: 353px;
+  height: 307px;
+}
+
+.step p {
+  margin-top: auto;
+  font-size: 1.5rem;
+  font-weight: 200;
+  line-height: 1.875rem;
+  text-align: left;
+}
+
+.step:hover {
+  transform: scale(1.05);
 }
 
 /*# sourceMappingURL=index.css.map */
