--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -2,11 +2,17 @@
   max-width: 1000px;
   margin: 50px auto 0px;
 }
-.title{
+.title-h1{
   font-weight: 500;
   font-size: 2rem;
   line-height: 2.625rem;
   text-align: center;
+}
+
+.title-h2{
+  font-weight: 400;
+  font-size: 2.25rem;
+  line-height: 2.625rem;
 }
 
 .pink {
