--- a/src/styles/blocks/hero.scss
+++ b/src/styles/blocks/hero.scss
@@ -74,6 +74,7 @@
     }
 
     &__find-pet-butt {
+        font-weight: 300;
         position: relative;
         margin: 100px auto 0;
         font-size: 1.5rem;
