--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -57,12 +57,14 @@
   }
 
   .footer-cont__logo-name {
+    font-weight: 300;
     font-size: 2rem;
     line-height: 2.39rem;
     margin-bottom: 5px;
   }
 
   .footer-cont__logo-description {
+    font-weight: 300;
     font-size: 1.33rem;
     line-height: 1.6rem;
   }
